Fixed padding on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -954,6 +954,16 @@ h5 {
   padding-bottom: 2rem;
 }
 
+.py-28 {
+  padding-top: 7rem;
+  padding-bottom: 7rem;
+}
+
+.py-20 {
+  padding-top: 5rem;
+  padding-bottom: 5rem;
+}
+
 .pt-6 {
   padding-top: 1.5rem;
 }
@@ -1274,6 +1284,14 @@ h5 {
 
   .md\:pt-48 {
     padding-top: 12rem;
+  }
+
+  .md\:pt-40 {
+    padding-top: 10rem;
+  }
+
+  .md\:pt-36 {
+    padding-top: 9rem;
   }
 
   .md\:text-left {
